# fileconverter

./: LICENSE  README.md  __init__.py  __main__.py  pyproject.toml  requirements-cli.txt  requirements.txt
build_scripts/: build_linux.sh  build_macos.sh  build_windows.bat
cli/: __init__.py  main.py
converters/: __init__.py  archive_converter.py  audio_converter.py  contact_calendar_converter.py  data_converter.py  document_converter.py  ebook_converter.py  font_converter.py  image_converter.py  spreadsheet_converter.py  vector_converter.py  video_converter.py
core/: __init__.py  base.py  checksums.py  config.py  engine.py  exceptions.py  formats.py  history.py  logging_setup.py  presets.py  registry.py  watcher.py
gui/: __init__.py  app.py  theme.py
gui/widgets/: __init__.py  drop_area.py  queue_table.py
utils/: __init__.py  paths.py
